--- a/pup.html
+++ b/pup.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="pup.html"></a> Click me! </a>
+    PUPPUPUPUPUP
+    <a href="index.html"></a> Click me! </a>
 </body>
 </html>
