--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            border: 1px solid green;
+        }
+        p {
+            color: red;
+            font-family: sans-serif;
+            font-size: 40px;
+
+        }
+        .alternate1{
+            color: blue;
+            transition: 1s;
+
+        }
+
+        .alternate1:hover{
+            color:orange;
+        }
+    </style>
 </head>
 <body>
-    <a href="pup.html"></a> Click me! </a>
+    <h1>
+        this is the heading
+    </h1>
+   <p class="alternate1">
+       paragraph
+
+   </p>
+
+   <p>
+    paragraph
+</p>
+
 </body>
 </html>
